cabal-version:   3.0
name:            contra-tracer-contrib
version:         0.1.0.0
synopsis:        Utility modules for contra-tracer
description:
  A collection of utility modules that extend contra-tracer with common
  functionality: file logging, thread-safe wrappers, timestamp prepending,
  selective forwarding, and pattern synonyms for tracer deconstruction.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
copyright:       (c) 2025 Paolo Veronelli
category:        Control
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.8.4

source-repository head
  type:     git
  location: https://github.com/paolino/contra-tracer-contrib

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    Data.Tracer.Contrib
    Data.Tracer.Intercept
    Data.Tracer.LogFile
    Data.Tracer.ThreadSafe
    Data.Tracer.Timestamps
    Data.Tracer.TraceWith

  build-depends:
    , base           >=4.14 && <5
    , contra-tracer  >=0.1  && <0.3
    , time           >=1.9  && <1.15

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          main.hs
  other-modules:
    Data.Tracer.InterceptSpec
    Data.Tracer.LogFileSpec
    Data.Tracer.ThreadSafeSpec
    Data.Tracer.TimestampsSpec
    Data.Tracer.TraceWithSpec

  build-depends:
    , async
    , base                   >=4.14 && <5
    , contra-tracer
    , contra-tracer-contrib
    , directory
    , filepath
    , hspec
    , QuickCheck
    , temporary

  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
